WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111201
transition-property property and transition shorthand property doesn't accept "all, all".
https://bugs.webkit.org/show_bug.cgi?id=111201
Summary
transition-property property and transition shorthand property doesn't accept...
Syoichi Tsuyuhara
Reported
2013-03-01 11:39:07 PST
Created
attachment 190998
[details]
test case According to CSS Transitions...
>Name: transition-property >Value: none | <single-transition-property> [ ‘,’ <single-transition-property> ]* >(snip) ><single-transition-property> = all | <IDENT>
http://dev.w3.org/csswg/css3-transitions/#transition-property
>Name: transition >Value: <single-transition> [ ‘,’ <single-transition> ]* >(snip) ><single-transition> = [ none | <single-transition-property> ] || <time> || <single-transition-timing-function> || <time>
http://dev.w3.org/csswg/css3-transitions/#transition
On Windows 7 Home Premium SP1 64bit, Internet Explorer 10 and Firefox Nightly 22.0a1(buildID 20130301030909) corresponds to this. But Chromium 27.0.1427.0 (185534) doesn't accept "all, all" in transition-property property and transition shorthand property. This bug seems not to be fixed in
Bug 110074
unfortunately. Therefore I reports it as a Bug with a test case.
Attachments
test case
(757 bytes, text/html)
2013-03-01 11:39 PST
,
Syoichi Tsuyuhara
no flags
Details
Patch
(8.16 KB, patch)
2013-03-01 13:12 PST
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2013-03-01 11:48:01 PST
I'm wondering if all, all makes any sense. Tab what do you think?
Tab Atkins
Comment 2
2013-03-01 12:24:30 PST
(In reply to
comment #1
)
> I'm wondering if all, all makes any sense. > > Tab what do you think?
Yes, it should accept both. It's not very *useful* to do so, but once we switch from 'all' being a magic value to 'all' just being a normal shorthand property, we'll want to allow it to be duplicated.
Alexis Menard (darktears)
Comment 3
2013-03-01 12:26:04 PST
(In reply to
comment #2
)
> (In reply to
comment #1
) > > I'm wondering if all, all makes any sense. > > > > Tab what do you think? > > Yes, it should accept both. It's not very *useful* to do so, but once we switch from 'all' being a magic value to 'all' just being a normal shorthand property, we'll want to allow it to be duplicated.
Ok then I'll fix it.
Alexis Menard (darktears)
Comment 4
2013-03-01 13:12:09 PST
Created
attachment 191022
[details]
Patch
WebKit Review Bot
Comment 5
2013-03-04 10:51:30 PST
Comment on
attachment 191022
[details]
Patch Clearing flags on attachment: 191022 Committed
r144644
: <
http://trac.webkit.org/changeset/144644
>
WebKit Review Bot
Comment 6
2013-03-04 10:51:34 PST
All reviewed patches have been landed. Closing bug.
Syoichi Tsuyuhara
Comment 7
2013-03-05 18:54:18 PST
I confirmed that this bug is fixed on Chromium 27.0.1431.0 (186272). Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug