transition-property property and transition shorthand property doesn't accept "all, all". https://bugs.webkit.org/show_bug.cgi?id=111201

Reviewed by Simon Fraser.

Source/WebCore:

Relax the parsing of transition-property to allow all, all as a value.
It is not very useful per say but it is possible by the spec and we
align with Firefox, IE and Opera.

Test: LayoutTests/transitions/transitions-parsing.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseAnimationProperty):

LayoutTests:

Updated the tests to cover the bug.

* transitions/transitions-parsing-expected.txt:
* transitions/transitions-parsing.html:


Canonical link: https://commits.webkit.org/129689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144644 268f45cc-cd09-0410-ab3c-d52691b4dbfc